test/zinc_source/compile_errors/functions/09_duplicate_named_arg_same_name.zn
// expected-error: positional arguments must come before named arguments

struct Args {
    x: i64
    y: i64
}

fn add(x, y) {
    return x + y
}

fn main() {
    args = Args { x: 1, y: 2 }
    add(..args, 3)
}
